<resources>
    <string name="app_name">HumiditySensor</string>
    <string name="button_login">登录</string>
    <string name="button_register">注册</string>
    <string name="button_return_login">返回登录</string>
    <string name="reminder_account">账号</string>
    <string name="invalid_input">输入信息不完整，请检查！</string>
    <string name="transfer_failure">与服务器通信失败！</string>
    <string name="login_done">登录成功</string>
    <string name="register_done">注册成功</string>
    <string name="username_exists">用户名已存在！</string>
    <string name="invalid_password">两次输入密码不同，请检查！</string>
    <string name="login_failure">登录失败，请重试！</string>
    <string name="register_failure">注册失败，请重试！</string>
    <string name="service_name">CompetitionBA_Service</string>
    <string name="card_title">CompetitionBA_Service</string>
    <string name="reminder_password">密码</string>
    <string name="reminder_regpwd">请输入密码</string>
    <string name="reminder_regpwd_2nd">请再次输入密码</string>
    <string name="et_psw">请输入wifi密码</string>
    <string name="et_name">请输入wifi账号</string>
    <string name="et_GUID">请输入目标IP地址</string>
    <string name="et_nickname">请输入昵称(可选)</string>
    <string name="invalid_ip">IP地址格式错误，请重试！</string>
    <string name="configuration_saved">配置已保存！</string>
    <string name="configuration_read_failure">配置读取失败！</string>
    <string name="configuration_write_failure">配置写入失败！</string>
    <string name="hint_guid">当前连接传感器GUID</string>
    <string name="otg_not_supported">您的手机不支持通过USB配置传感器！</string>
    <string name="USB_comm_failure">USB串口通信失败！</string>
    <string name="USB_perm_failure">没有USB通信权限！</string>
    <string name="sensor_register_done">传感器注册成功</string>
    <string name="sensor_register_fail">传感器注册失败</string>
    <string name="new_sensor">新传感器</string>
</resources>
